# canalroya

./: .env.example  README.md  pyproject.toml  requirements.txt  tox.ini
canalroya/: admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  utils.py  views.py
canalroya/locale/fr/LC_MESSAGES/: django.po
canalroya/management/commands/: loaddata.py
canalroya/migrations/: 0001_initial.py  0002_testimonial_email.py  0003_alter_testimonial_status.py  0004_alter_testimonial_image_alter_testimonial_status.py  0005_postgres_extensions.py
canalroya/static/css/: main.css
canalroya/static/js/: testimonial-cropper.js
canalroya/templates/canalroya/: base.html  counter_iframe.html  testimonial_detail.html  testimonial_form.html  testimonial_list.html  testimonial_pagination.html  testimonial_thanks.html
canalroya/templatetags/: paginator_tags.py
pdma/: asgi.py  settings.py  urls.py  wsgi.py
