[tool.poetry]
name = "canalroya"
version = "0.1.0"
description = ""
authors = ["Santiago Lamora <santiago@ribaguifi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
django-extensions = "^3.2.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
