[tool.poetry]
name = "canalroya"
version = "0.1.0"
description = ""
authors = ["Santiago Lamora <santiago@ribaguifi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.13"
django-extensions = "^3.2.1"
pillow = "^10.2.0"
django-bootstrap5 = "^22.2"
django-environ = "^0.10.0"
psycopg2-binary = "2.9.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
